fix bottom scrollbar

--- a/apps/music-applications-f/src/app/components/live-search/styles.scss
+++ b/apps/music-applications-f/src/app/components/live-search/styles.scss
@@ -55,6 +55,7 @@
   display: flex;
   flex-direction: column;
   overflow: scroll;
+  overflow-x: hidden;
   height: 500px;
   width: 50%;
 }
@@ -95,7 +96,7 @@
 }
 
 .dropdown-container::-webkit-scrollbar {
-  width: 30px;
+  width: 10px;
 }
 
 .dropdown-container::-webkit-scrollbar-track {
